# Copyright (c) 2021 Petr Vorel <pvorel@suse.cz>

if build_arping == true
  subdir('arping')
endif

if build_clockdiff == true
  subdir('clockdiff')
endif

if build_ninfod == true
  subdir('ninfod')
endif

if build_ping == true
  subdir('ping')
endif

if build_rarpd == true
  subdir('rarpd')
endif

if build_tracepath == true
  subdir('tracepath')
endif
